--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -280,13 +280,14 @@
        " 'Area': 203}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[0]"
+    "cities[0\n",
+    "    ]"
    ]
   },
   {
